[gd_scene load_steps=7 format=3 uid="uid://irpquugqy33h"]

[ext_resource type="Texture2D" uid="uid://cavefbyh8ak4g" path="res://mobs/onyx/animation/idle_animation/idle_animation[1].jpg" id="1_6475j"]
[ext_resource type="Script" path="res://mobs/onyx/onyx.gd" id="1_fnkml"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ocjb2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_6475j")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gmb5t"]
size = Vector2(47.75, 55.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sb261"]
size = Vector2(12, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_7s2ea"]
radius = 288.111

[node name="Onyx" type="CharacterBody2D"]
script = ExtResource("1_fnkml")
jump_height = -400

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(24.1639, 28.1289)
rotation = 3.14159
scale = Vector2(0.0333992, 0.0417353)
sprite_frames = SubResource("SpriteFrames_ocjb2")
animation = &"idle"

[node name="HitboxOnyx" type="CollisionShape2D" parent="."]
position = Vector2(24.125, 28.125)
shape = SubResource("RectangleShape2D_gmb5t")

[node name="Hitbox" type="Area2D" parent="."]

[node name="HitboxOnyx" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(24, 44)
shape = SubResource("RectangleShape2D_sb261")

[node name="DetectionAreaPlayer" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionAreaPlayer"]
position = Vector2(24, 24)
shape = SubResource("CircleShape2D_7s2ea")

[node name="PositionTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="WaitingTimerGoBackToPosition" type="Timer" parent="."]
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="DetectionAreaPlayer" to="." method="_on_detection_area_player_body_entered"]
[connection signal="body_exited" from="DetectionAreaPlayer" to="." method="_on_detection_area_player_body_exited"]
[connection signal="timeout" from="PositionTimer" to="." method="_on_position_timer_timeout"]
[connection signal="timeout" from="WaitingTimerGoBackToPosition" to="." method="_on_waiting_timer_go_back_to_position_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
